# RippleDetectorUI

./: CMakeLists.txt  README.md  RippleDetectorUI.qmlproject  qmlmodules
content/: App.qml  CMakeLists.txt  Screen01.ui.qml
imports/: CMakeLists.txt
imports/RippleDetectorUI/: CMakeLists.txt  ShpinBox.qml  qmldir
imports/RippleDetectorUI/designer/: plugin.metainfo
src/: channelselection.cpp  channelselection.h  datainterface.cpp  datainterface.h  import_qml_plugins.h  main.cpp  rippledetector.cpp  rippledetector.h  stimulationhandler.cpp  stimulationhandler.h
